# Haskell-Desugar

./: Haskell-Desugar.cabal  LICENSE  README.md
Language/Haskell/Exts/: Desugar.hs  Desugaring.hs  Unique.hs
Language/Haskell/Exts/Desugar/: Basic.hs  Case.hs  Conversion.hs  Declaration.hs  Declaration.hs-boot  Expression.hs  Pattern.hs  Record.hs  Type.hs
